--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,6 @@ pyspellchecker = "^0.7.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+ignore = ["E501"]
