--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 pyspellchecker = "^0.7.2"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
