--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-langchain = "^0.0.305"
+langchain = ">=0.0.305"
 openai = "^0.28.1"
 ruff = "^0.0.291"
 python-dotenv = "^1.0.0"
