--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,42 @@
-aiohttp==3.8.5
+aiohttp==3.9.3
 aiosignal==1.3.1
-annotated-types==0.5.0
+annotated-types==0.6.0
 anyio==3.7.1
-async-timeout==4.0.3
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.3.0
-dataclasses-json==0.6.1
-frozenlist==1.4.0
-greenlet==2.0.2
-idna==3.4
+attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+dataclasses-json==0.6.4
+frozenlist==1.4.1
+greenlet==3.0.3
+idna==3.6
 iniconfig==2.0.0
+isort==5.13.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.305
-langsmith==0.0.41
-marshmallow==3.20.1
-multidict==6.0.4
+langchain==0.1.6
+langchain-community==0.0.20
+langchain-core==0.1.23
+langsmith==0.0.87
+marshmallow==3.20.2
+multidict==6.0.5
 mypy-extensions==1.0.0
-numexpr==2.8.7
-numpy==1.25.2
+numpy==1.26.4
 openai==0.28.1
 packaging==23.2
-pluggy==1.3.0
-pydantic==2.4.2
-pydantic_core==2.10.1
-pyspellchecker==0.7.2
-pytest==7.4.2
-python-dotenv==1.0.0
+pluggy==1.4.0
+pydantic==2.6.1
+pydantic_core==2.16.2
+pyspellchecker==0.7.3
+pytest==7.4.4
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.31.0
 ruff==0.0.291
 sniffio==1.3.0
-SQLAlchemy==2.0.21
+SQLAlchemy==2.0.27
 tenacity==8.2.3
-tqdm==4.66.1
+tqdm==4.66.2
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-urllib3==2.0.5
-yarl==1.9.2
+typing_extensions==4.9.0
+urllib3==2.2.0
+yarl==1.9.4
